--- a/css/colors.css
+++ b/css/colors.css
@@ -1,6 +1,4 @@
 :root {
-    --kids-yellow: #FEBC48;
-    --kids-blue: #1F1CFB;
-    --bg-color: var(--kids-yellow);
+    --bg-color: #ff8c69;
     --shadow: #533d4a;
   }
