--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,26 +1,1 @@
-@font-face {
-    font-family: Apercu;
-    src: url(font/apercu/apercu_regular.otf);
-}
-@font-face {
-    font-family: Apercu;
-    src: url(font/apercu/apercu_bold.otf);
-    font-weight: bold;
-}
-@font-face {
-    font-family: ITC Clearface Pro;
-    src: url(font/itc/itc_clearface_regular.ttf);
-}
-@font-face {
-    font-family: ITC Clearface Pro;
-    src: url(font/itc/itc_clearface_bold.ttf);
-    font-weight: bold;
-}
-
-.font-family-apercu {
-    font-family: "Apercu", sans-serif;
-}
-
-.font-family-clearface {
-    font-family: "ITC Clearface Pro", sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
